RESOLVED FIXED158725
Fix 2d canvas transform after r192900
https://bugs.webkit.org/show_bug.cgi?id=158725
Summary Fix 2d canvas transform after r192900
Alex Christensen
Reported 2016-06-13 21:45:08 PDT
Fix 2d canvas transform after r192900
Attachments
Patch (3.51 KB, patch)
2016-06-13 21:49 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-06-13 21:49:29 PDT
WebKit Commit Bot
Comment 2 2016-06-15 12:41:51 PDT
Comment on attachment 281232 [details] Patch Clearing flags on attachment: 281232 Committed r202102: <http://trac.webkit.org/changeset/202102>
WebKit Commit Bot
Comment 3 2016-06-15 12:41:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.