Fix 2d canvas transform after r192900 https://bugs.webkit.org/show_bug.cgi?id=158725 Source/WebCore:

rdar://problem/26774230

Patch by Alex Christensen <achristensen@webkit.org> on 2016-06-15
Reviewed by Dean Jackson.

Test: fast/canvas/canvas-transform-inverse.html

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::transform):
r192900 was intended to have no change in behavior, but I made a typo.
We need to apply the inverse of the original transform to the path to be correct.
This affects transforms applied to the canvas during the creation of a path.

LayoutTests:

Patch by Alex Christensen <achristensen@webkit.org> on 2016-06-15
Reviewed by Dean Jackson.

* fast/canvas/canvas-transform-inverse-expected.html: Added.
* fast/canvas/canvas-transform-inverse.html: Added.

Canonical link: https://commits.webkit.org/176881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202102 268f45cc-cd09-0410-ab3c-d52691b4dbfc